# intellieye

./: README.md  controller.py  install.ps1  intellieye.py  model.py  pyproject.toml  requirements.txt  run.ps1  screen_capture.py
.github/workflows/: ci.yml
tests/: test_smoke.py
