[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intellieye"
version = "0.1.0"
description = "AI가 화면을 실시간으로 보면서 노트북을 제어하는 에이전트"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Hyunho Cho" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers>=4.48.0",
    "accelerate>=1.0.0",
    "Pillow",
    "mss",
    "pyautogui",
    "pyperclip",
    "opencv-python",
    "huggingface_hub",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
intellieye = "intellieye:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
